<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditProfileActivity">
    <item
        android:id="@+id/abc"
        android:checkable="false"
        android:enabled="false"
        android:title="@string/header_context_menu_title"
        android:visible="true" />
    <item
        android:id="@+id/takeapic"
        android:checkable="false"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/open_camera"
        android:visible="true" />
    <item
        android:id="@+id/opengall"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/open_gallery"
        android:visible="true" />

</menu>